# ks3

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/ks3/: types.hpp
include/ks3/gui/: simulator_window.hpp
include/ks3/sim/: context.hpp  node.hpp  quat.hpp  vec3.hpp
src/: main.cpp
src/gui/: simulator_window.cpp
src/sim/: node.cpp
test/: CMakeLists.txt
test/sim/: CMakeLists.txt  vec3.cpp
ui/: simulator_window.ui
